修改第二篇SVG的效果

--- a/_posts/2021-01-09-svg_gife.md
+++ b/_posts/2021-01-09-svg_gife.md
@@ -12,7 +12,7 @@ categories:
 以下是我在阿里巴巴矢量图标库中找到的红包图案，在代码的编写中利用animateTransform使其变化属性，从而让红包图案进行放大,放大倍数为1.2倍，持续时间为3s
 
 <div>
-<svg t="1610363986691" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1234" width="200" height="200" style="height:100px;width:100px;">
+<svg t="1610363986691" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1234" width="100px" height="100px" >
 	<path d="M792.7 960.2H232.6c-22.1 0-40-17.9-40-40v-816c0-22.1 17.9-40 40-40h560.1c22.1 0 40 17.9 40 40v816c0 22.1-17.9 40-40 40z" fill="#CE302F" p-id="1235">
 		</path>
 	<path d="M792.7 965.2H232.6c-24.8 0-45-20.2-45-45v-816c0-24.8 20.2-45 45-45h560.1c24.8 0 45 20.2 45 45v816c0 24.8-20.2 45-45 45z m-560.1-896c-19.3 0-35 15.7-35 35v816c0 19.3 15.7 35 35 35h560.1c19.3 0 35-15.7 35-35v-816c0-19.3-15.7-35-35-35H232.6z" fill="#333333" p-id="1236">
@@ -35,7 +35,7 @@ categories:
 </div>
 
 <div>
-<svg t="1610363986691" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1234" width="200" height="200"style="height:100px;width:100px;">
+<svg t="1610363986691" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1234" width="150px" height="150px">
 	<path d="M792.7 960.2H232.6c-22.1 0-40-17.9-40-40v-816c0-22.1 17.9-40 40-40h560.1c22.1 0 40 17.9 40 40v816c0 22.1-17.9 40-40 40z" fill="#CE302F" p-id="1235">
 		</path>
 	<path d="M792.7 965.2H232.6c-24.8 0-45-20.2-45-45v-816c0-24.8 20.2-45 45-45h560.1c24.8 0 45 20.2 45 45v816c0 24.8-20.2 45-45 45z m-560.1-896c-19.3 0-35 15.7-35 35v816c0 19.3 15.7 35 35 35h560.1c19.3 0 35-15.7 35-35v-816c0-19.3-15.7-35-35-35H232.6z" fill="#333333" p-id="1236">
@@ -54,7 +54,15 @@ categories:
 		</path>
 	<path d="M512.7 372.8m-74.3 0a74.3 74.3 0 1 0 148.6 0 74.3 74.3 0 1 0-148.6 0Z" fill="#F7B034" p-id="1243">
 		</path>
-		<animateTransform attributeName="transform" begin="0s" dur="3s"  type="scale" from="1" to="1.2" repeatCount="indefinite tape："/>
+		<animateTransform
+            attributeName="transform"
+            begin="0s"
+            dur="20s"
+            type="rotate"
+            from="30 60 90"
+            to="310 240 170"
+            repeatCount="indefinite"
+        />
 </svg>
 
 </div>
