修改第一篇学习笔记格式问题

--- a/_posts/2021-01-09-learn page1.md
+++ b/_posts/2021-01-09-learn page1.md
@@ -11,22 +11,18 @@ categories:
 
 #### 中英文对译法
 
-例如简单的<body>、 <head>、<style>...... 可谓就是“有手就行”
+例如简单的body、 head、style...... 可谓就是“有手就行”
 
-又如<address>、text-transform、Global navigation...... 只要学英语的同学，记得住单词的同学，这不就是花费一点功夫就能完全记住的么。
+又如address、text-transform、Global navigation...... 只要学英语的同学，记得住单词的同学，这不就是花费一点功夫就能完全记住的么。
 
 #### 谐音含义巧记法
- 
-例如：
 
-指定其它元信息 → <meta>, 
+例如：指定其它元信息 → <meta>, 
 
 仔细观察，其含义中出现了“它”字，它的拼音不就是ta嘛，那这不就符合了meta 中的ta了么。
 
 又如：
-
 <noframes> → 定义针对不支持框架的用户的替代内容, 
-
 <iframe> → 定义内联框架, 
 
 这两个标签如何区分其含义呢？ 首先 noframes 单词中出现了no,对应含义中的不支持
