修改第一篇学习笔记的文字内容

--- a/_posts/2021-01-09-learn page1.md
+++ b/_posts/2021-01-09-learn page1.md
@@ -11,9 +11,8 @@ categories:
 
 #### 中英文对译法
 
-例如简单的body、 head、style...... 可谓就是“有手就行”
-
-又如address、text-transform、Global navigation...... 只要学英语的同学，记得住单词的同学，这不就是花费一点功夫就能完全记住的么。
+例如：简单的body、 head、style...... 可谓就是“有手就行”
+address、text-transform、Global navigation...... 只要学英语的同学，记得住单词的同学，这不就是花费一点功夫就能完全记住的么。
 
 #### 谐音含义巧记法
 
@@ -21,7 +20,6 @@ categories:
 
 仔细观察，其含义中出现了“它”字，它的拼音不就是ta嘛，那这不就符合了meta 中的ta了么。
 
-又如：
 <noframes> → 定义针对不支持框架的用户的替代内容, 
 <iframe> → 定义内联框架, 
 
@@ -30,9 +28,9 @@ categories:
 
 #### 根据含义记标签
 
-1. 规定应该从父元素继承 position 属性的值。 → inherit,
+规定应该从父元素继承 position 属性的值。 → inherit,
 
-2. 生成绝对定位的元素，相对于 static 定位以外的第一个父元素进行定位。
+生成绝对定位的元素，相对于 static 定位以外的第一个父元素进行定位。
 元素的位置通过 "left", "top", "right" 以及 "bottom" 属性进行规定。 → absolute, 
 
 第一句的含义中出现了“继承”的字眼，自然而然对应inherit的意思
